--- a/info/task_description.html
+++ b/info/task_description.html
@@ -6,7 +6,7 @@
 
 <ul>
     <li>The number has a specific length, passed through the second argument.</li>
-    <li>The number consists of digests passed through the first argument.</li>
+    <li>The number consists of digits passed through the first argument.</li>
     <li>Every digit can be used only once.</li>
     <li>The order of the digits remains the same.</li>
     <li>It is always enough digits for the resulting number.</li>
